[metadata]
name = mychat
version = attr: src.mychat.__version__
description = MyChat
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/achimnol/pycon-kr2019-aiohttp-tutorial
author = Joongi Kim
author_email = me@daybreaker.info
license = MIT

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7
setup_requires =
    setuptools>=41.0.1
install_requires =
    aiohttp~=3.5.0
    aiohttp_cors~=0.7
    aiohttp_session~=2.7.0
    aiojobs~=0.2.2
    aioredis~=1.2.0
    aiotools>=0.8.1
    async_timeout~=3.0
    Jinja2~=2.10

[options.extras_require]
build =
    wheel>=0.33.4
    twine>=1.13.0
test =
    pytest>=5.0.0
    pytest-asyncio>=0.10.0
    pytest-aiohttp
    flake8
dev =
    pytest-sugar
ci =

[options.packages.find]
where = src
include = mychat.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
